# butterchurn-wasm

./: .gitignore  CLAUDE.md
example/: index.html
example/pkg/: khviz.d.ts  khviz.js  khviz_bg.wasm  khviz_bg.wasm.d.ts  package.json
khviz/: Cargo.toml
khviz/src/: audio.rs  lib.rs  preset.rs  textures.rs  utils.rs  visualizer.rs
khviz/src/eel/: eval.rs  lexer.rs  mod.rs  parser.rs
khviz/src/renderer/: blur.rs  comp.rs  gl.rs  mod.rs  motion.rs  output.rs  shapes.rs  warp.rs  waves.rs
