[package]
name = "khviz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window", "Document", "HtmlCanvasElement",
  "WebGl2RenderingContext", "WebGlProgram", "WebGlShader",
  "WebGlBuffer", "WebGlVertexArrayObject", "WebGlTexture",
  "WebGlFramebuffer", "WebGlRenderbuffer", "WebGlUniformLocation",
  "ImageData", "OffscreenCanvas",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
fastrand = "2"

[profile.release]
opt-level = 3
lto = true
